--- a/DotnetOmar.Logger/DotnetOmar.Logger.csproj
+++ b/DotnetOmar.Logger/DotnetOmar.Logger.csproj
@@ -4,6 +4,24 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>DotnetOmar.Logger</PackageId>
+        <Version>1.0.0</Version>
+        <Title>DotnetOmar Logger</Title>
+        <Authors>Omar Elsayed</Authors>
+        <Description>Colored Logger For Dictionary, List and more.</Description>
+        <Copyright>Omar Elsayed</Copyright>
+        <PackageProjectUrl>https://github.com/dotnet-omar/dotnet-omar</PackageProjectUrl>
+        <PackageIcon>favicon.png</PackageIcon>
+        <RepositoryUrl>https://github.com/dotnet-omar/dotnet-omar</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>Logger, Dotnet</PackageTags>
+        <PackageReleaseNotes>Initiale version</PackageReleaseNotes>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Update="favicon.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
+    </ItemGroup>
 </Project>
