--- a/DotnetOmar.Logger/DotnetOmar.Logger.csproj
+++ b/DotnetOmar.Logger/DotnetOmar.Logger.csproj
@@ -16,12 +16,16 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>Logger, Dotnet</PackageTags>
         <PackageReleaseNotes>Initiale version</PackageReleaseNotes>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="favicon.png">
-        <Pack>True</Pack>
-        <PackagePath></PackagePath>
-      </None>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+        
+        <None Update="favicon.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
     </ItemGroup>
 </Project>
